@@ -9,6 +9,7 @@ Changelog for 1.4.6
 * Fixed bug 1262, cannot post overpayment with formatted nums (Chris T)
 * Fixed bug 1263, error when control_code not filled in (chris T)
 * Fixed update button not showing after save (Chris T)
+* Fixed bug 1260, Multiple vendor skus breaks display of invoice (Chris T)
 
 Pongracz I is Pongracz Istvan
 Chris T is Chris Travers
@@ -209,6 +210,7 @@ Changelog for 1.3.46
 * Fixed related bug to 1259 on invoices (Chris T)
 * Some log quieting fixes. (Chris T)
 * Fixed bug 1262, cannot post overpayment with formatted numbers (Chris T)
+* Fixed bug 1260, Multiple vendor skus breaks display of invoice (Chris T)
 
 Chris T is Chris Travers
 Pongracz I is Pongracz Istvan
